# Arduino

./: CMakeLists.txt
hardware/arduino/: CMakeLists.txt
hardware/arduino/avr/: CMakeLists.txt
hardware/arduino/avr/bootloaders/optiboot/: Makefile  flash.sh  makeall  optiboot_atmega328_384_8.hex  optiboot_atmega328_384_8.lst  optiboot_atmega328p.hex  optiboot_atmega328p.lst
hardware/arduino/avr/cores/arduino/: CMakeLists.txt
hardware/arduino/avr/libraries/: CMakeLists.txt
hardware/arduino/avr/libraries/EEPROM/: CMakeLists.txt
hardware/arduino/avr/libraries/SPI/: CMakeLists.txt
hardware/arduino/avr/libraries/Wire/: CMakeLists.txt
libraries/: CMakeLists.txt
libraries/LiquidCrystal/: CMakeLists.txt
